# lamotte-spintouch

./: .gitignore  GATT_PROFILE.md  LICENSE  README.md  RESEARCH.md  hacs.json  pyproject.toml
.github/workflows/: release.yaml  validate.yaml
automations/: README.md  chemistry_alerts.yaml  sync_to_intellicenter.yaml
custom_components/: hacs.json
custom_components/spintouch/: __init__.py  base.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  sensor.py  strings.json  util.py
custom_components/spintouch/translations/: da.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt-BR.json  ru.json  sv.json  zh-Hans.json  zh-Hant.json
docs/: ARCHITECTURE.md  QUALITY_SCALE.md  TROUBLESHOOTING.md
esphome/: README.md  bluetooth_proxy.yaml  secrets.yaml.example  spintouch.yaml
homeassistant/: lsi_template.yaml
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py
